# Big-tmki

./: .cursorignore  .env.example  .gitignore  .gitleaks.toml  .markdownlint.jsonc  .pre-commit-config.yaml  07_security_addendum.md  09_document_processing.md  10_ai_runtime.md  13_ai_skills_registry.md  16_tool_registry.md  18_technology_watch.md  20_product_requirements_v0_3.md  AGENTS.md  Makefile  ORG_MODEL.md  README.md  docker-compose.yml  pytest.ini  requirements.txt  run-auto-train.ps1  start-demo.ps1  start-director-ui.ps1  start-pto-ui.ps1
runtime/: .gitignore  README.md  env.advanced.example  env.demo.example  env.ocr.example  pyproject.toml  secrets.local.example
runtime/docker/: docker-compose.full.yml  docker-compose.kanboard.yml  docker-compose.yml  env.example  env.production.example  init.sql  kanboard-init.sh  kanboard_seed_demo.php  kanboard_sync_todo_xlsx.php
runtime/scripts/: analyze_reindex_progress_log.py  audit_skru2_index.py  auto_train_pipeline.py  benchmark_regulations_search.py  bootstrap_secrets.py  build_doc_catalog_cache.py  check_docker.py  check_ocr_http.py  check_ollama.py  check_runtime_health.py  check_secrets.py  chunking_config.py  compare_chunks_quality.py  compare_partial_quality.py  configure_cloud.ps1  configure_profile.ps1  debug_dasha_doc_search.py  demo_read_formats.py  download_piper_voice.py  download_silero_model.py  eval_search_quality.py  export_finalize_ops_bundle.py  export_ops_archive.py  export_reindex_audit.py  export_reindex_complete.py  export_reindex_ops_bundle.py  finalize_regulations_index.ps1  fix_vks_paths_in_skru2.py  gen_skru2_format_lab.py  generate_qa_pairs.py  import_regulations_full.py  index_todo_list_and_sync_kanboard.py  kanboard_reset_admin.php  kanboard_reset_admin.ps1  kanboard_seed_demo.ps1  load_regulations_pgvector.py  maybe_snapshot_partial_quality.py  merge_env.py  merge_vks_into_skru2.py  pgvector_smoke.py  (+59 more)
runtime/tests/: conftest.py  test_admin_grants.py  test_bm25.py  test_chat_session.py  test_check_ollama.py  (+86 more)
(+268 files in other folders)
