[project]
name = "tmki-runtime"
version = "0.1.0"
description = "TMKI AI Runtime — policy context, RAG + server-side RLS (MVP)"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
pgvector = ["psycopg[binary]>=3.2"]
ocr = ["pypdf>=4.0", "cryptography>=3.1", "pymupdf>=1.24.0", "pytesseract>=0.3.10"]
search = ["pymorphy3>=2.0", "pymorphy3-dicts-ru>=2.4", "rank_bm25>=0.2.2"]
voice = ["piper-tts>=1.4.0"]
stt = ["faster-whisper>=1.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tmki_policy*", "tmki_rag*", "tmki_tools*", "tmki_loop*", "tmki_runtime*", "tmki_ingest*", "tmki_admin*", "tmki_sharepoint*", "tmki_llm*", "tmki_ocr*", "tmki_voice*", "tmki_legal*", "tmki_desktop_sync*", "tmki_hr*", "tmki_document*", "tmki_demo*"]

[project.scripts]
tmki-grants-ui = "tmki_admin.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
